syntax = "proto3";
package broadcast;

option go_package = "pan/broadcast";

message ServeInfo{
  int32 Port = 1;
  bytes Type = 2;
}

message Alive {
  int64 seq = 1;
  bytes baseId = 2;
  repeated ServeInfo serveInfos = 4;
}

message Death {
  int64 seq = 1;
  bytes baseId = 2;
}
